# oto

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
inc/oto/: assets.hpp  dumper.action.hpp  dumper.assets.hpp  dumper.exceptions.hpp  dumper.hpp  dumper.yaml.hpp  engine.hpp  renderer.hpp  scene.hpp  v_engine.hpp  vm.hpp
lib/: dumper.ml  dumper_action.ml  dune  oto.ml  pegasus.ml  types.ml  vm.ml
oto/: builder.ml  dumper.ml  dumper_action.ml  dumper_assets.ml  dumper_printer.ml  dune  oto.ml  types.ml  vm.ml
outo/: action.ml  assets.ml  dune  outo.ml  printer.ml  yaml.ml
pegasus/: cindel.ml  dune  pegasus.ml  specs.ml  state.ml  state.mli  ticks.ml  ticks.mli
pegasus/cpp/: CMakeLists.txt  main.cpp
poc/: CMakeLists.txt  assets.hpp  dump-action.cpp  dump-assets.cpp  dump-yaml.cpp  dumper.hpp  font.cpp  font.hpp  main.cpp  poc-action.yaml  poc-assets.cpp  poc.cpp  poc.hpp
sdl/: main.cpp  renderer.cpp  renderer.hpp
src/: engine.cpp  frame_state.hpp  main.cpp  renderer.cpp  renderer.hpp  sdl.cpp  sdl.hpp
test/: action_dump.expected  action_dump.ml  asset_listing.expected  asset_listing.ml  dune  pegasus.ml  poc-action.cpp  poc-assets.yaml  poc-yaml.cpp  poc.assets.hpp  poc.cpp  poc.expected  poc.font.hpp  poc.hpp  poc.ml  poc.scenes.hpp  poc_pegasus.ml  yaml_dump.expected  yaml_dump.ml
wasm/: example.html  example.js  extern.cpp  extern.syms  main.cpp
