(data_only_dirs cpp)

(rule
 (deps
  (source_tree cpp))
 (targets libpegasus_cpp.a)
 (action
  (no-infer
   (progn
    (run cmake -B cmake -S cpp)
    (run cmake --build cmake)
    (copy cmake/libpegasus_cpp.a libpegasus_cpp.a)))))

(library
 (name pegasus)
 (libraries oto sdl2)
 (foreign_archives pegasus_cpp))
